# OOPlab1

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: primer 1.py  primer 2.py  primer 3.py  primer 4.py
src/: make1.py  make2.py
src/lab1oop/: make1.py  make2.py
src/lab1oop/task_package_1/: __init__.py  zad1.py
src/lab1oop/task_package_2/: __init__.py  zad2.py
src/task_package_1/: zad_1.py
src/task_package_2/: zad_2.py
tests/: test_make1.py  test_make2.py  test_zad1.py  test_zad2.py
