[project]
name = "lab1oop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Danielyan", email = "morskoykut@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest",
]

[project.scripts]
lab1oop = "lab1oop:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--verbose --strict-markers --strict-config"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]
